--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://git.io/fjHxp" rel="nofollow">´ó¼ÍÔª</a> | <a href="https://git.io/fjHxh" rel="nofollow">¶¯Ì¬Íø</a> | <a href="https://git.io/fjHpv" rel="nofollow">ÉñÖÝ</a> | <a href="https://git.io/fjHpJ" rel="nofollow">ÍËµ³</a> | <a href="https://git.io/fjHpU" rel="nofollow">¾ÅÆÀ</a> | <a href="https://git.io/fjHpT" rel="nofollow">ÍøÃÅ</a> | <a href="https://git.io/fjHpk" rel="nofollow">ÉñÔÏ</a> | <a href="https://git.io/fjHpI" rel="nofollow">ÐÂ¼ÍÔª</a> | <a href="https://git.io/fjHpL" rel="nofollow">¿´ÖÐ¹ú</a> | <a href="https://git.io/fjHpt" rel="nofollow">Ã÷»ÛÍø</a> | <a href="https://git.io/fjHpq" rel="nofollow">Ã÷»ÛÊ®·½</a> | <a href="https://git.io/fj9lQ" rel="nofollow">Ã÷»Û½¹µã</a> | <a href="https://git.io/fjHpm" rel="nofollow">Ï£ÍûÖ®Éù</a> | <a href="https://git.io/fjHpY" rel="nofollow">ÂþÌ¸µ³ÎÄ»¯</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">ÐÂÌÆÈË</a> | <a href="https://git.io/JervF" rel="nofollow">ÑÇÌ«Ì¨</a> | <a href="https://git.io/fjHpG" rel="nofollow">Ö±²¥</a> | <a href="https://git.io/fj9lp" rel="nofollow">´«Ææ</a> | <a href="https://git.io/fj9lX" rel="nofollow">Éñ»°</a> | <a href="https://git.io/fjHpZ" rel="nofollow">ÈËÉú</a> | <a href="https://git.io/fjFNJ" rel="nofollow">Î±»ð</a > | <a href="https://git.io/fjHpc" rel="nofollow">ÕæÏàÆ¬</a> | <a href="https://git.io/fj9lK" rel="nofollow">²Ø×ÖÊ¯</a> | <a href="https://git.io/fj9l5" rel="nofollow">¶ÌÊÓÆµ</a> | <a href="https://git.io/fjHpW" rel="nofollow">¸æËßÎ´À´</a > | <a href="https://git.io/fjHpl" rel="nofollow">ÖÕ¼¶Ä¿µÄ</a> | <a href="https://git.io/fj9lM" rel="nofollow">ÖÐ¹²»îÕª</a > | <a href="https://git.io/fjHp4" rel="nofollow">·çÓêÌìµØÐÐ</a></p></td></tr>
-<tr><td VALIGN=TOP width="355"><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11706070.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LX2NM-320x200.jpg">¿âµÂÂå£ºÐ­ÒéÈôÎÞÖ´ÐÐ±£Ö¤ ´¨ÆÕ»á×ß¿ª</a><br><h2><p><hr><strong>ÅÅÐÐ°ñ</strong></p></h2>
+<tr><td VALIGN=TOP width="355"><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11706002.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1140447854-600x400-2-320x200.jpg">¡¾ÐÂÎÅ¿´µã¡¿¹ØË°ÏÞÆÚ½ü ±±¾©¶à±ä ´¨ÆÕ£º¿´Çé¿ö</a><br><h2><p><hr><strong>ÅÅÐÐ°ñ</strong></p></h2>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11696287.md#1">¸ßÒÔÏèÖèÊÅÊÂ¼þÎªºÎÁîÕÔÀöÓ±ÒâÍâµÇÉÏÈÈËÑ£¿</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690272.md#1">¡¾ÐÂÎÅ¿´µã¡¿±±¾©×îµ£ÐÄµÄÀ´ÁË Î÷·½ËæÃÀÖÆ²Ã</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11700803.md#1">¡¾ÐÂÎÅ¿´µã¡¿½ÓÁ¬ÊÜÖØ»÷ ±±¾©×î´óØ¬ÃÎÒªÀ´ÁË</a><br>
@@ -10,6 +10,7 @@
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690519.md#1">ÖÐ¹ú¾­¼ÃÕæÏà ·ÖÎö£ºÊµ¼ÊGDPËõË®Ò»°ë</a><br>
 <br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/nscrw413.md#1">¸ü¶à......</a></p><hr><h2><p><strong>½ñÈÕÆÀÂÛ</strong></p></h2>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11704921.md#1">ÆôÃ÷£º¹²²úµ³×¢¶¨ÃðÍö</a><br>
+<a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11705122.md#1">ÍõÐÐ£ºÖÐ¹²µÄ¼à¿ØÓëÎÒ¿´µ½µÄÓîÖæ¼à¿Ø</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11704968.md#1">¡¾Ë¼ÏëÁìÐä¡¿ÖÐ¹²ÄÚ²¿³ÐÈÏÕý×ßÏò½âÌå£¨¶þ£©</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11704965.md#1">Äþ¾²£º¡¶»¨ÎªÃ½¡·±»ÖÐ¹²½û²¥Ê®ÎåÄêÖ»ÎªÒùÂÒ»ªÏÄ</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11704884.md#1">¾Ñ»÷689£º»ªÎª251ÊÂ¼þºÍÏã¸Û·´ÐÞÀýÔË¶¯</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702628.md#1">³ÂË¼Ãô£ºÏã¸Û¾­¼Ã¿¿×ÔÓÉ·¨ÖÎ Ë¥ÍËÒþÓÇ×ïÔÚÖÐ¹²</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702387.md#1">³ÌÏþÈÝ£º»ªÎªÏÝÀ§¾³ ¹úÄÚ³óÎÅÓëº£ÍâÖÊÒÉ</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702110.md#1">ÑÏÏþ£ºÎÒÃÇ²»ÄÜ³ÁÄ¬</a><br>
-<a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701848.md#1">Ô¬±ó£º´Ó¡¶¹²²úµ³ÐûÑÔ¡·¿´¹²²úÖ÷ÒåµÄÆÆ»µÐÔ</a><br>
 <br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/news392.md#1">¸ü¶à......</a></p><hr><h2><p><strong>¶À¼ÒÊÓ½Ç</strong></p></h2>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11674545.md#1">´¨Ï°ÖÜÎåÍ¬¶ÔÃ³Ò×Ð­Òé±íÌ¬ ·Ö±ðÊÍºÎÐÅºÅ</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11674344.md#1">´¨ÆÕ£ºÈô·ÇÎÒ³öÃæ Ïã¸ÛÔçÔÚ14·ÖÖÓÄÚ±»»Ù</a><br>
@@ -30,6 +30,7 @@
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/21/n11672214.md#1">¡¾ÈÈµã»¥¶¯¡¿ÃÀ¹ú»áÎªºÎ»ðËÙÍ¨¹ýÏã¸Û·¨°¸£¿</a><br>
 <br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/nf6092.md#1">¸ü¶à......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11706070.md#1">¿âµÂÂå£ºÐ­ÒéÈôÎÞÖ´ÐÐ±£Ö¤ ´¨ÆÕ»á×ß¿ª</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11705480.md#1">¹þ¶û±õ°¢³ÇÇøÇ°Õþ·¨Î¯Êé¼ÇÍõÔÆ·É±»¾Ù±¨</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11705987.md#1">ÖÐ¹ú¿ªÊÀ½çÂÉÊ¦´ó»á±»¼¥·í Î¬È¨ÂÉÊ¦½û²ÎÓë</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11705893.md#1">·¸ÉæºÚµÈÎå×ï ÄÚÃÉµçÊÓÌ¨Ç°Ì¨³¤»ñÐÌ18Äê</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11704260.md#1">¡¾·­Ç½±Ø¿´¡¿´«ÖªÏþºËÐÄÃØÃÜ »ªÎªÓÐÔ±¹¤Ê§×Ù</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11705484.md#1">ÉÂÎ÷¹Ù³¡³ÖÐøµØÕð »ªÒõÕþ·¨Î¯Ç°Êé¼Ç±»Ë«¿ª</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11705039.md#1">·ðÉ½É½»ð³ÖÐø24Ð¡Ê± »ðÊÆËæ·çÁ¦¼Ó´óÂûÑÓ</a><br>
-<a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11705122.md#1">ÍõÐÐ£ºÖÐ¹²µÄ¼à¿ØÓëÎÒ¿´µ½µÄÓîÖæ¼à¿Ø</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11700975.md#1">ÔâÉ³Ñó·¶¼ÒÌ¨¼àÓüÆÈº¦ ·¨ÂÖ¹¦Ñ§Ô±Àî´óÒ¢ÀëÊÀ</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11705789.md#1">¸ßÊ¢£ºÖÐ¹úÁÏÏÂµ÷2020¾­¼ÃÔö³¤ÖÁ6%×óÓÒ</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/6/n11705391.md#1">¸°°×¹¬¼û´¨ÆÕ ¹ùÌ¨Ãú£ºÌ¸ÃÀÖÐÃ³Ò×Óë¾­¼Ã</a><br>
@@ -88,7 +88,7 @@
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703340.md#1">ÖÐ¹²ÑëÊÓÂþ»­¹¥»÷ÃÀ¹ú Åª³ö¹ú¼Ê´óÐ¦»°</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703472.md#1">ÖÐ¹úÕ®Îñ·çÏÕ´´ÐÂ¸ß ·ÖÎö£º¿Ö×ª¼Þ¸øÃñÖÚ</a><br>
 <a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703525.md#1">ÅîÅå°Â·ÃÎÊÆÏÌÑÑÀ£ºÓë»ªÎªºÏ×÷´øÀ´·çÏÕ</a><br>
-<br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://ds4bx35keziem.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ">ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³">¾ÅÆÀ¹²²úµ³</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ">¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"">ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý">ÆÊÎö1400Àý</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì">Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°">Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯">¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª">ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½">ÌúÖ¤ÈçÉ½</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ">Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦">µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ">ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá">Ë«³ÇÑªÀá</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤">ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720">´Ó610µ½720</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ">ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà">ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó">±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513">¼ûÖ¤513</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ">¹¦·ò Ñ°µÀ</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£">¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ">ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ">ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://ds4bx35keziem.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²">Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ">ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª">¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·">Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨">303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î">º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½">Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°">²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
+<br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ">ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³">¾ÅÆÀ¹²²úµ³</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ">¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"">ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý">ÆÊÎö1400Àý</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì">Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°">Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯">¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª">ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½">ÌúÖ¤ÈçÉ½</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ">Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦">µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ">ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá">Ë«³ÇÑªÀá</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤">ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720">´Ó610µ½720</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ">ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà">ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó">±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513">¼ûÖ¤513</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ">¹¦·ò Ñ°µÀ</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£">¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ">ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ">ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://d22jyab5wisc0e.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rieinn282/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²">Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ">ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª">¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·">Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨">303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î">º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½">Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/rieinn282/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°">²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703260.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1148931765-150x120.jpg"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703260.md#1">ÃÀÃ½£º629Ãû°Í»ùË¹Ì¹Å®×Ó±»··µ½ÖÐ¹úµ±ÐÂÄï</a><br>Ò»ÕÅÓÖÒ»ÕÅµÄ°×Ö½ÉÏ¶ÑÂúÁËÃû×Ö£ºÀ´×Ô ...<br><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702792.md#1">ÄÚÃÉÂäÂí¹«°²Ìü³¤ÂíÃ÷ ËùÉæÆÈº¦·¨ÂÖ¹¦°¸Àý</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11700408.md#1">¹«Ö÷ÁëÐÂÉú¼àÓüµçÐÌ¡°Ô¼Êø´ø¡±º¦·¨ÂÖ¹¦Ñ§Ô±</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11700918.md#1">¹ã¶«°ËÑ®·¨ÂÖ¹¦Ñ§Ô±ÁÖ×÷Ó¢ÃæÁÙ·Ç·¨Í¥Éó</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702722.md#1">°ÄÖÞ³ÉÁ¢Î¯Ô±»á ²éÍâ¹úÊÆÁ¦½åÉç½»Ã½Ìå¸ÉÕþ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701874.md#1">º¼ÖÝ·ÃÃñÎ¬È¨Ê®ÄêÎÞ¹û ±»µ±¾Ö°ó¼ÜÖÁºÚ¼àÓü</a><br><br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702339.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1903250746132378-600x389-150x120.jpg"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702339.md#1">·ÖÎö£º´óÂ½±«ÓãÎªºÎÂô³ö°×²Ë¼Û</a><br>¡°Èí»Æ½ð¡±±«Óã½üÆÚÂô³ö°×²Ë¼ÛÇÒÈÃÑø ...<br><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11700595.md#1">ÈÕ±¾ÒÕÈË¸ßµº£ºÒò·¶±ù±ùÊÂ¼þÎÒÃ»Ï·¿ÉÅÄÁË</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11701266.md#1">Ê±ÖµËêÄ© ÖÐ¹úA¹ÉÊÐ³¡¸ö¹ÉÒì¶¯·çÏÕ¼Ó¾ç</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11701075.md#1">ÀÏ×ÖºÅÈ«¾ÛµÂ¸ß¹ÜÀëÖ° ¹É¶«ÌÓÀë ÃæÁÙÍËÊÐ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11701063.md#1">¹©Ó¦Á´×ªÒÆ ÃÀÖÐÐÍÆóÒµÑ°ÕÒÖÐ¹úÒÔÍâÊÐ³¡</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11700818.md#1">ÖÐ¹úÖªÃûÑ§Õß¹ÀGDPÔö³¤²»×ã5% Ô­ÎÄÔâÉ¾</a><br><br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703466.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/photo-150x120.jpg"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703466.md#1">¼¦Î÷¼¯ÍÅÇ·Ð½1Äê Ã½ÌåÈËÏÂ°àÂôÆ»¹û°ï´êÔè</a><br>ÓÐ¼¦Î÷ÐÂÎÅ´«Ã½¼¯ÍÅÖ°¹¤±íÊ¾£¬¼¯ÍÅÒÑ ...<br><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703304.md#1">ÖÐ¹úÉç¿ÆÔº½ðÈÚËùÊé¼Ç±»²é ÔøÈÎÖÐ¼ÍÎ¯¼ì²éÔ±</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703283.md#1">ºôºÍºÆÌØÖÐÔºÇ°Ôº³¤ÊÜÉó ±»¿ØÊÜ»ßÓâÁ½Ç§Íò</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702873.md#1">×èµÐ¶ÔÊÆÁ¦¸ÉÔ¤ÃñÖ÷ Ì¨Á¢Î¯£ºÖÐ¹²ÊÇÎ¨Ò»µÐÈË</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703314.md#1">¸ÛÂÉÕþË¾Ë¾³¤Ö£Èôæè ±»¡°°ó¼Ü¡±»Ø±±¾©£¿</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701864.md#1">¡¾·­Ç½±Ø¿´¡¿Â½ÃñÖÚº°Ê±´ú¸ïÃü ÖÐ¹²Ø¬ÃÎÀ´ÁË</a><br><br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÌìÔÖÈË»ö</strong></p></h2><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702300.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2014/04/1312271502051528-150x120.jpg"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702300.md#1">´óÂ½Êý°ÙÍò¡°À¶×ì´½¡±²¡ÈË¿¿³ÔÎ°¸çÐøÃü</a><br>´óÂ½Äê½ö8ËêµÄºÓÄÏÐí²ýÅ®º¢Ð¡ÑÅ£¨»¯Ã ...<br><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702307.md#1">ä¯ÑôÑÌ»¨³§±¬Õ¨7ËÀ ³§·¿³ÉÆ½µØ Æû³µÕ¨±äÐÎ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701869.md#1">¹ã¶«Ò»Ä¾²Ä³§×Å»ðÑÓÉÕ3¶°ÃñÕ¬ ÏÖ³¡ÓÐÓÍ¹Þ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701759.md#1">ÌÆÉ½4.5¼¶µØÕðºó ÐÂ½®ÏÖ4.9¼¶µØÕð</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701535.md#1">ºÓ±±ÌÆÉ½·¢Éú4.5¼¶µØÕð ±±¾©ÓÐÕð¸Ð</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/4/n11701064.md#1">Ï°½üÆ½6Äê¡°ÍÑÆ¶¡±ÆÚÏÞ½ü ¸÷µØÕþ¸®Ã¦Ôì¼Ù</a><br><br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid280.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703099.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/d616f32af30c66155e1e6d0b889cae4d-150x120.jpg"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11703099.md#1">Ì¨Ã½´óÊ¦Á´±±¾©²åÆì Ñ§Õß£ºÐÂÐÍÊýÎ»Í³Õ½</a><br>ÐÂÍøÂ·ÄÚÈÝÆ½Ì¨¡°´óÊ¦Á´¡±½üÈÕÐû²¼½« ...<br><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701694.md#1">È«Çò×îÊÊºÏ¾Ó×¡¼°¾ÍÒµ³ÇÊÐ Ì¨±±ÖØµÇ¹Ú¾ü</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11702627.md#1">¸ßÒÔÏèâ§ÊÅ Õã½­ÎÀÊÓ¡¶×·ÎÒ°É¡·ÓÀ¾ÃÍ£²¥</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701699.md#1">°Ù¶ÈÓÖÆØ³óÎÅ ÊÕÇ®ÍÆ¹ã¼ÙÒ© ÓâÎåÇ§ÈËÊÜÆ­</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701612.md#1">±»±¬É¨Â¥Ê½³ï¿î ¡°Ë®µÎ³ï¡±ÏÝÐÅÓÃÎ£»ú</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701627.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2019/12/04£©</a><br><br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11698440.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/03/VCG11490128167_meitu_1-1-150x120.jpg"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11698440.md#1">µÏÀöÈÈ°ÍÓë¹ÅÁ¦ÄÈÔú±»½Ð»ì ´óÂ½ÃûÖ÷³ÖÔâÅÚºä</a><br>À´×ÔÐÂ½®µÄ´óÂ½Å®ÐÇµÏÀöÈÈ°ÍÓë¹ÅÁ¦ÄÈ ...<br><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697165.md#1">Â½Ã½¼ÙÐÂÎÅ£º¶íÍ¼-160ºäÕ¨»úºÝË¦ÃÀF-35Õ½»ú</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11696641.md#1">±±´óÖúÀí½ÌÊÚ±»¾Ù±¨Óë¶àÈËÓÐ²»Õýµ±¹ØÏµ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690755.md#1">Ê×Ò½´óÐ£³¤ÊµÃû¾Ù±¨ ÔºÊ¿µÈ3Ñ§ÕßÑ§ÊõÔì¼Ù</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690483.md#1">ÕÆÞâÄÐ×Ó ÑëÊÓÅ®¼ÇÕß¿×ÁÕÁÕÔÚÓ¢¹ú»ñ×ï</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11673100.md#1">¡¶ÁÒ»ðÕ½³µ¡·Ó°ÆÀ£º°ÂÁÖÆ¥¿ËÖÐµÄÐÅÑöÖ®¹â</a><br><br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697873.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/140626080016100615-600x400-150x120.jpg"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11697873.md#1">¸ÛÈËÉí·Ý±äÃô¸Ð£¿½»ÒøÏã¸ÛÊ×Ï¯¾­¼ÃÊ¦±»³´</a><br>Ç°ÖÐ¹ú£¨¹²£©½»Í¨ÒøÐÐÏã¸Û·Ö²¿µÄÊ×Ï¯ ...<br><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11698082.md#1">¸üÑÏÖÆ²Ã ´«°×¹¬Äâ½«»ªÎªÌÞ³öÃÀÒøÐÐÌåÏµ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11696142.md#1">ÖÐ¹²ÖÆ²ÃÃÀÈËÈ¨×éÖ¯ ±»Ö¸¡°À×Éù´óÓêµãÐ¡¡±</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/2/n11696073.md#1">ÃÀ²ÎÒéÔ±»ØÓ¦ÖÐ¹²±¨¸´ Ö¸±±¾©·¢Æ¢ÆøÃ»ÓÃ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11693636.md#1">ÖÐ¹úÂÉÊ¦ºôÓõµÖÖÆ¡°ÊÀ½çÂÉÊ¦´ó»á¡±</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/30/n11691986.md#1">ÍâÃ½£ºÖÐ¹²¼à¿Ø¹úÃñ ½«ÖÇÄÜÊÖ»úÎäÆ÷»¯</a><br><br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701647.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/S__13869058-150x120.jpg"></a><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/5/n11701647.md#1">·¨ÖÆÈÕ¸÷µØÃñÖÚÎ¬È¨ ¹úÐÅ¾Ö·ÃÃñÈËÍ·Ó¿Ó¿</a><br>12ÔÂ4ÈÕÊÇÈ«¹ú·¨ÖÆÐû´«ÈÕ£¬È«¹ú¸÷µØ¶ ...<br><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/3/n11698433.md#1">ÖÐ¹²¾å¿¹ÕùÂûÑÓÈ«¹ú Ã¯Ãû¡°Ê±´ú¸ïÃü¡±³É¹¦</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/12/1/n11692726.md#1">Íø´«¹ã¶«´åÃñº°¡°Ê±´ú¸ïÃü¡±·´¿¹¾¯²ìÕòÑ¹</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/30/n11691946.md#1">¹ã¶«ÉÏÍò´åÃñÕòÕþ¸®Ç°ÇëÔ¸ Óë¾¯³ÖÐø¶ÔÖÅ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/29/n11690397.md#1">·´¶Ô½¨»ðÔá³¡Ã¯Ãû´åÃñÔÙ°ÕÊÐ ÌØ¾¯½ø´å×¥ÈË</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/25/n11680036.md#1">ÌØ¹¤³öÌÓ¡¢ÃÜ¼þÍâÐ¹¼°Ïã¸ÛÑ¡¾Ù ÖÐ¹²ËÄÃæ³þ¸è</a><br><br><p><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>¾ÅÆÀ¹²²úµ³</strong></p></h2><a href="https://github.com/rieinn282/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">¡¾Ò»¡¿ÆÀ¹²²úµ³ÊÇÊ²Ã´</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">¡¾¶þ¡¿ÆÀÖÐ¹ú¹²²úµ³ÊÇÔõÑùÆð¼ÒµÄ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">¡¾Èý¡¿ÆÀÖÐ¹ú¹²²úµ³µÄ±©Õþ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">¡¾ËÄ¡¿ÆÀ¹²²úµ³ÊÇ·´ÓîÖæµÄÁ¦Á¿</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">¡¾Îå¡¿ÆÀ½­ÔóÃñÓëÖÐ¹²Ïà»¥ÀûÓÃÆÈº¦·¨ÂÖ¹¦</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">¡¾Áù¡¿ÆÀÖÐ¹ú¹²²úµ³ÆÆ»µÃñ×åÎÄ»¯</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">¡¾Æß¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÉ±ÈËÀúÊ·</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">¡¾°Ë¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÐ°½Ì±¾ÖÊ</a><br><a href="https://github.com/rieinn282/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">¡¾¾Å¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÁ÷Ã¥±¾ÐÔ</a></td><td VALIGN=TOP width="352"><h2><p><strong>ÈýÍË´ó³±</strong></p></h2><strong>ÍË³öÖÐ¹²µ³¡¢ÍÅ¡¢¶Ó×ÜÈËÊý:
 
