--- a/gb/ncid282_5.md
+++ b/gb/ncid282_5.md
@@ -17,6 +17,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/8/n11642488.md#1" target="_blank">广东男童幼儿园就餐后亡 医院：疑鼠药中毒</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/8/n11642488.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/2019110717304239081-150x120.jpg" align ="left"></a>近日，广东珠海一名5岁男童在幼儿园就餐后食物中毒离世，尿检结果显示，该男童体内检出灭鼠药成分氟乙酰氨。 男童家长表示，幼儿园没有监控，“目前联系不上幼儿园”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月09日 12:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11640028.md#1" target="_blank">【直播回放】蓬佩奥重要演讲 纪念柏林墙倒塌</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11640028.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Screen-Shot-2019-11-08-at-2.01.00-PM-150x120.jpg" align ="left"></a>美国国务卿蓬佩奥将在柏林标志性的勃兰登堡门发表重要演讲，纪念柏林墙倒塌30周年。新唐人电视台和《大纪元时报》将进行全程追踪和网络直播，并有同声翻译。请锁定新闻直播间。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 6:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/8/n11641024.md#1" target="_blank">中国人喜欢一种茶 推高全球牛奶价格</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/8/n11641024.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/GettyImages-3342312-150x120.jpg" align ="left"></a>全球牛奶价格一直在上升，现已达到多年新高，部分原因是中国消费者对奶制品需求的激增。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 12:39 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/12/n11649948.md#1" target="_blank">双十一妻贷款购物30余万元 丈夫无奈欲跳楼</a><br></h3>双十一，大陆民众疯狂购物，或许有很多便宜“福利”，但是狂买也会有让人承受不住的时候。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 3:07 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/12/n11649670.md#1" target="_blank">每日三退声明精选（2019/11/11）</a><br></h3>我们知道了必须退队的原因，最近香港被大陆(中共)害的好惨，我老公是逃港人员，我每天祈祷老天保佑香港。感谢法轮功讲真话，法轮大法好！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 12:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/12/n11649443.md#1" target="_blank">云南男子闯幼儿园喷氢氧化钠液体 伤54人</a><br></h3>11月11日，云南开远市一男子进入开远市东城幼儿园，用自制的氢氧化钠液体，喷向幼儿园师生，导致部分师生被灼伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 10:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/11/n11649034.md#1" target="_blank">玻利维亚总统辞职 川普：向委内瑞拉释信号</a><br></h3>美国总统川普（特朗普）周一（11月11日）发表声明表示，玻利维亚总统辞职是西半球民主的重要时刻，并向委内瑞拉和尼加拉瓜等“非法政权”发出信号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月12日 5:29 AM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/8/n11642148.md#1" target="_blank">中共大举灭佛 吉林丰满区近30米佛像被炸毁</a><br></h3>中共近来不断强拆中国各地佛像、庙宇，有外媒报导，吉林省吉林市丰满区一座斥资人民币300万元（约新台币1,302万元）、历经11年雕出的29公尺高释迦牟尼山体雕像，还未打磨、镀金，就被政府以“超高”为由炸毁，当地官员还被威胁，若违抗命令者将被停职。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月09日 3:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/8/n11641163.md#1" target="_blank">滇恶霸孙小果涉黑判囚25年 再审案未宣判</a><br></h3>11月8日，云南昆明恶霸孙小果等13人组织、领导、参加黑社会性质组织等犯罪一案一审判决。孙小果因涉黑罪，判处有期徒刑25年，没收全部财产。但孙小果20多年前所犯案，并未宣判。网民纷纷表示，希望孙早日判处死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 2:40 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/8/n11641035.md#1" target="_blank">每日三退声明精选（2019/11/07）</a><br></h3>从小的时候就听共产党的教育，后来到了中学时期，从中共的腐败的的事情看出这个政权完全是欺骗这片土地上的人们的伪政权，在私下里拜访过受中共迫害的人，才知这个政权岂止是劣迹斑斑，简直就是罪恶滔天、罄竹难书、人神共愤。现声明与中共势不两立。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 11:45 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/7/n11639636.md#1" target="_blank">台中大十多个两岸学者电邮疑遭中共监看3年</a><br></h3>中山大学7日传出十多位涉及两岸研究的学者，被假账号监看电子邮件信箱长达三年，这些被监看的学者其研究领域涉及两岸关系。对此，陆委会7日表示，中共极权专制长期打压不同意见，近年中共更将监控系统运用在校园里面，监控师生言谈行为，中共对人权侵害日益严重。陆委会已请教育部进一步了解。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月08日 2:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rieinn282/djy/blob/master/gb/ncid282_5.md#1<br><a href="https://github.com/rieinn282/djy/blob/master/gb/ncid282_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/rieinn282/djy/blob/master/gb/ncid282_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_5.htm">http://www.epochtimes.com/gb/ncid282_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
