--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -22,7 +22,7 @@
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11681807.md#1" target="_blank">海风：在中共眼里 民意表达就是“煽颠罪”</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11681807.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911250557062478-150x120.jpg" align ="left"></a>港人在11月24日的区议会选举中，泛民主派完胜建制派。这是港人追求民主与自由的又一次胜利。可喜可贺！然而，在中共专制暴政统治下的香港，民意就如同炭火堆里的冰块，但是这次冰的力量巨大，不像之前很快会被烈火所溶化。如果冰不能被烈火所溶化，那么就是火被冰化成水所灭熄。因为专制暴政与民主就像水火一样，是不可能在一处并存。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:38 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682680.md#1" target="_blank">夏小强：香港抗议者是在搞独立和分裂吗？</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682680.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911250743022478-150x120.jpg" align ="left"></a>从历史来看，中共政权是最大的卖国者和分裂中国的罪魁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 12:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11681748.md#1" target="_blank">洪达：千古冤 天象变</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11681748.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/9bab8008e164d0bf6c6bfb5f40b249ee-150x120.jpg" align ="left"></a>打开十一月二十四日的明慧网，首先映入眼帘的是：共有十位法轮功学员被迫害致死，他们分别来自北京、山东、四川与陕西等地。霎时感到冤气冲天，久久难以平息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 7:10 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682174.md#1" target="_blank">张林：中共傀儡在香港选举中惨败</a><br></h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/26/n11682174.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911242036112188-600x400-1-150x120.jpg" align ="left"></a>随着香港理工大学抗争人数迅速减少，香港街头示威也似乎停止。正当人们以为香港人抗争运动告一段落之时，忽然传来【亲北京政党区选全军覆没】的喜讯！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 7:07 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11687005.md#1" target="_blank">廖祖笙：与习近平先生“再谈谈”</a><br></h3>习近平先生，因为生存的需要、尊严的需要、安全的需要、团体的需要等等无一得到合理的满足，我于近期离开福建泰宁，在某沿海城市想要另求发展，这之间，我被跟踪、被套路、被劝返，被雪上加霜无谓地消耗了几千块钱，被完全封闭想要另求发展的通道，有人在种种下流至极的布局中，将我反复玩弄于掌心，不时有人站着说话不腰疼，要我“回去和他们再.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 6:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/22/n11674919.md#1" target="_blank">李旭彤：挖掘五千年文明惊世宝藏（4）</a><br></h3>人类认知或说认识事物的第一步是识别或区分个体，因此我们需要考虑中西方两个认知体系在这一步是否已经开始分叉。因为亚氏逻辑学不研究对象或个体是如何来的，而这恰恰是我们比较的起点。所以在与《易经》比较时，需要在亚氏逻辑学方面添加一部分内容。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 5:32 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/rieinn282/djy/blob/master/gb/19/11/28/n11686647.md#1" target="_blank">关乐：从香港区选看天灭中共布局</a><br></h3>区选选民何其多，道是公投不为过。
 区区区选重在何？人心所向史河舵。
